--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,16 @@
 # Node artifact files
 node_modules/
 dist/
+html/
 
 # Compiled Java class files
 *.class
 
 # Compiled Python bytecode
 *.py[cod]
+*.js
+*.html
+*.css
 
 # Log files
 *.log
@@ -47,6 +51,4 @@ Thumbs.db
 *.flv
 *.mov
 *.wmv
-/html
-*.html
 
